Change alfanet link

--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -115,7 +115,7 @@
         </section>
 
         <section class="row news-item-container">
-          <a class="news-item col-12" href="/news/newdeephpi">
+          <a class="news-item col-12" href="http://bioinfo.usu.edu/alfanet/">
             <div class="row ps-0">
               <div class="col-3 ps-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/tools/alfalfa_logo.png?a=height&w=1&h=1" class="img-fluid">
@@ -124,7 +124,7 @@
                 <span class="date">Jul 1, 2021</span>
                 <h5 class="header">alfaNET is Here!</h5>
                 <p class="desc">
-                  alfaNET is a host-pathogen interactome tool used in the devlopment of molecular strategies for combating bacterial blight in alfalfa.
+                  alfaNET is a host-pathogen interactome tool used in the development of molecular strategies for combating bacterial blight in alfalfa.
                 </p>
               </div>
             </div>
