Change news items

--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -22,85 +22,70 @@
           <b>General</b>
         </section>
 
-        <section class="row news-item-container">
-          <a class="news-item col-12" href="/news/newadmin1">
+        <section class="row news-item-container justify-content-center">
+          <a class="news-item col-9" href="/news/newadmin1">
             <div class="row ps-0">
-              <div class="col-9 pt-1">
+              <div class="col-10 pt-1">
                 <span class="date">May 25, 2021</span>
                 <h5 class="header">New Undergrad Student: Andrew</h5>
-                <p class="desc">
-                  Andrew Joufrray has joined and will be working on data augmentation.
-                </p>
               </div>
-              <div class="col-3 pe-0 my-auto">
+              <div class="col pe-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/people/ajouffray/profile.jpg?a=height&w=6&h=6" class="img-fluid">
               </div>
             </div>
           </a>
         </section>
 
-        <section class="row news-item-container">
-          <a class="news-item col-12" href="/news/newadmin1">
+        <section class="row news-item-container justify-content-center">
+          <a class="news-item col-9" href="/news/newadmin1">
             <div class="row ps-0">
-            <div class="col-3 ps-0 my-auto">
+              <div class="col ps-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/profile/david.jpg?a=height&w=6&h=6" class="img-fluid">
               </div>
-              <div class="col-9 pt-1">
+              <div class="col-10 pt-1">
                 <span class="date">Mar 3, 2021</span>
                 <h5 class="header">New PhD Student: David</h5>
-                <p class="desc">
-                  David Guevara has joined our team.
-                </p>
               </div>
             </div>
           </a>
         </section>
 
-        <section class="row news-item-container">
-          <a class="news-item col-12" href="/news/newadmin1">
+        <section class="row news-item-container justify-content-center">
+          <a class="news-item col-9" href="/news/newadmin1">
             <div class="row ps-0">
-              <div class="col-9 pt-1">
+              <div class="col-10 pt-1">
                 <span class="date">Feb 3, 2021</span>
                 <h5 class="header">New Undergrad Student: Kolton</h5>
-                <p class="desc">
-                  Kolton Hauck has joined our team.
-                </p>
               </div>
-              <div class="col-3 pe-0 my-auto">
+              <div class="col pe-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/profile/khauck.jpg?a=height&w=6&h=6" class="img-fluid">
               </div>
             </div>
           </a>
         </section>
 
-        <section class="row news-item-container">
-          <a class="news-item col-12" href="/news/citsatdb">
+        <section class="row news-item-container justify-content-center">
+          <a class="news-item col-9" href="/news/citsatdb">
             <div class="row ps-0">
-              <div class="col-3 ps-0 my-auto">
-                <img src="{{ RaikouServer }}/image/aspect/bioinfo/events/IMG_20200113_151858.jpg?a=height&w=4&h=4" class="img-fluid">
+              <div class="col ps-0 my-auto">
+                <img src="{{ RaikouServer }}/image/aspect/bioinfo/events/IMG_20200113_151858.jpg?a=height&w=4&h=5" class="img-fluid">
               </div>
-              <div class="col-9 ps-0 pt-1">
+              <div class="col-10 ps-0 pt-1">
                 <span class="date">Jan 11-15, 2020</span>
                 <h5 class="header">Naveen presents at International Plant Animal Genome Conference</h5>
-                <p class="desc">
-                  Naveen presented a poster on citSatdb and gave an oral presentation on GreeningDB.
-                </p>
               </div>
             </div>
           </a>
         </section>
 
-        <section class="row news-item-container">
-          <a class="news-item col-12" href="/news/newadmin1">
+        <section class="row news-item-container justify-content-center">
+          <a class="news-item col-9" href="/news/newadmin1">
             <div class="row ps-0">
-              <div class="col-9 pt-1">
+              <div class="col-10 pt-1">
                 <span class="date">Mar 21, 2020</span>
                 <h5 class="header">New HPC Admin: Shelby McCowan</h5>
-                <p class="desc">
-                  Shelby McCowan has joined the team and will be taking over as the new HPC Admin.
-                </p>
               </div>
-              <div class="col-3 pe-0 my-auto">
+              <div class="col pe-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/profile/shelby.jpg?a=height&w=6&h=6" class="img-fluid">
               </div>
             </div>
@@ -114,54 +99,44 @@
           <b>Science</b>
         </section>
 
-        <section class="row news-item-container">
-          <a class="news-item col-12" href="http://bioinfo.usu.edu/alfanet/">
+        <section class="row news-item-container justify-content-center">
+          <a class="news-item col-9" href="http://bioinfo.usu.edu/alfanet/">
             <div class="row ps-0">
-              <div class="col-3 ps-0 my-auto">
+              <div class="col ps-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/tools/alfalfa_logo.png?a=height&w=1&h=1" class="img-fluid">
               </div>
-              <div class="col-9 ps-0 pt-1">
+              <div class="col-10 ps-0 pt-1">
                 <span class="date">Jul 1, 2021</span>
-                <h5 class="header">alfaNET is Here!</h5>
-                <p class="desc">
-                  alfaNET is a host-pathogen interactome tool used in the development of molecular strategies for combating bacterial blight in alfalfa.
-                </p>
+                <h5 class="header">alfaNET: A host-pathogen interactome tool</h5>
               </div>
             </div>
           </a>
         </section>
 
-        <section class="row news-item-container">
-          <a class="news-item col-12" href="/news/newdeephpi">
+        <section class="row news-item-container justify-content-center">
+          <a class="news-item col-9" href="/news/newdeephpi">
             <div class="row">
-              <div class="col-9 ps-2 pt-3">
+              <div class="col-10 ps-2 pt-3">
                 <span class="date">Dec 1, 2019</span>
-                <h5 class="header">deepHPI is Online!</h5>
-                <p class="desc">
-                  To bolster and accelerate research on infectious disease, we have implemented deepHPI.
-                  The deepHPI web server is a platform that uses Convolutional Neural Network (CNN)...
-                </p>
+                <h5 class="header">deepHPI: A host-pathogen interactome tool</h5>
               </div>
-              <div class="col-3 pe-0 my-auto">
+              <div class="col pe-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/events/PAG-2019/g2.jpg?a=height&w=6&h=6" class="img-fluid">
               </div>
             </div>
           </a>
         </section>
 
-        <section class="row news-item-container">
-          <a class="news-item col-12" href="/news/covidtracker">
+        <section class="row news-item-container justify-content-center">
+          <a class="news-item col-9" href="/news/covidtracker">
             <div class="row ps-0">
-              <div class="col-3 ps-0 my-auto">
+              <div class="col ps-0 my-auto">
                 <img src="https://intermountainhealthcare.org/-/media/coronavirus-covid-19.jpg?la=en&h=286&w=300&mw=300&hash=CE04AC2D6DB0A5068DBB7D0CCEF7636A1C66C738"
                   class="img-fluid">
               </div>
-              <div class="col-9 ps-0 pt-1">
+              <div class="col-10 ps-0 pt-1">
                 <span class="date">March 26, 2020</span>
-                <h5 class="header">COVID-19 Tracker</h5>
-                <p class="desc">
-                  KAABiL now has a dashboard for tracking global COVID-19 data
-                </p>
+                <h5 class="header">COVID-19 Stats Tracker</h5>
               </div>
             </div>
           </a>
