--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -4,6 +4,12 @@
     content: "Transcriptional profiling of two contrasting genotypes uncovers molecular mechanisms underlying salt tolerance in alfalfa",
     doiLink: "https://doi.org/10.1038/s41598-021-84461-w",
     doiTitle: "10.1038/s41598-021-84461-w"
+  },
+  {
+    authors: "Kataria, R. and <b>Kaundal, R<sup>*</sup>.</b>",
+    content: "alfaNET: A Database of Alfalfa-Bacterial Stem Blight Protein–Protein Interactions Revealing the Molecular Features of the Disease-causing Bacteria",
+    doiLink: "https://doi.org/10.3390/ijms22158342",
+    doiTitle: "10.3390/ijms22158342"
   }
 ]
 %}
