--- a/src/views/pages/events/events.njk
+++ b/src/views/pages/events/events.njk
@@ -27,6 +27,8 @@
 
       <section class="{{ activeCheck('2021', routerEventsYearRange) }}" id="21">
         <h4 class="kbl-heading text-center">2021</h4>
+
+        <h5 class="text-center kbl-heading soft mt-5">No events due to COVID</h5>
       </section>
 
       <section class="{{ activeCheck('2020', routerEventsYearRange) }}" id="20">
