--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -26,7 +26,7 @@
           <a class="news-item col-9" href="/news/newadmin1">
             <div class="row ps-0">
               <div class="col-10 pt-1">
-                <span class="date">May 25, 2021</span>
+                <span class="date"><i class="far fa-calendar-alt"></i> May 25, 2021</span>
                 <h5 class="header">New Undergrad Student: Andrew</h5>
               </div>
               <div class="col pe-0 my-auto">
@@ -43,7 +43,7 @@
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/profile/david.jpg?a=height&w=6&h=6" class="img-fluid">
               </div>
               <div class="col-10 pt-1">
-                <span class="date">Mar 3, 2021</span>
+                <span class="date"><i class="far fa-calendar-alt"></i> Mar 3, 2021</span>
                 <h5 class="header">New PhD Student: David</h5>
               </div>
             </div>
@@ -54,7 +54,7 @@
           <a class="news-item col-9" href="/news/newadmin1">
             <div class="row ps-0">
               <div class="col-10 pt-1">
-                <span class="date">Feb 3, 2021</span>
+                <span class="date"><i class="far fa-calendar-alt"></i> Feb 3, 2021</span>
                 <h5 class="header">New Undergrad Student: Kolton</h5>
               </div>
               <div class="col pe-0 my-auto">
@@ -71,7 +71,7 @@
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/events/IMG_20200113_151858.jpg?a=height&w=4&h=5" class="img-fluid">
               </div>
               <div class="col-10 ps-0 pt-1">
-                <span class="date">Jan 11-15, 2020</span>
+                <span class="date"><i class="far fa-calendar-alt"></i> Jan 11-15, 2020</span>
                 <h5 class="header">Naveen presents at International Plant Animal Genome Conference</h5>
               </div>
             </div>
@@ -82,7 +82,7 @@
           <a class="news-item col-9" href="/news/newadmin1">
             <div class="row ps-0">
               <div class="col-10 pt-1">
-                <span class="date">Mar 21, 2020</span>
+                <span class="date"><i class="far fa-calendar-alt"></i> Mar 21, 2020</span>
                 <h5 class="header">New HPC Admin: Shelby McCowan</h5>
               </div>
               <div class="col pe-0 my-auto">
@@ -106,7 +106,7 @@
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/tools/alfalfa_logo.png?a=height&w=1&h=1" class="img-fluid">
               </div>
               <div class="col-10 ps-0 pt-1">
-                <span class="date">Jul 1, 2021</span>
+                <span class="date"><i class="far fa-calendar-alt"></i> Jul 1, 2021</span>
                 <h5 class="header">alfaNET: A host-pathogen interactome tool</h5>
               </div>
             </div>
@@ -116,8 +116,8 @@
         <section class="row news-item-container justify-content-center">
           <a class="news-item col-9" href="/news/newdeephpi">
             <div class="row">
-              <div class="col-10 ps-2 pt-3">
-                <span class="date">Dec 1, 2019</span>
+              <div class="col-10 ps-2 pt-1">
+                <span class="date"><i class="far fa-calendar-alt"></i> Dec 1, 2019</span>
                 <h5 class="header">deepHPI: A host-pathogen interactome tool</h5>
               </div>
               <div class="col pe-0 my-auto">
@@ -135,7 +135,7 @@
                   class="img-fluid">
               </div>
               <div class="col-10 ps-0 pt-1">
-                <span class="date">March 26, 2020</span>
+                <span class="date"><i class="far fa-calendar-alt"></i> March 26, 2020</span>
                 <h5 class="header">COVID-19 Stats Tracker</h5>
               </div>
             </div>
