--- a/src/views/components/pub-legend.njk
+++ b/src/views/components/pub-legend.njk
@@ -1,4 +1,5 @@
 {% macro pubLegend() %}
+  <!-- Filled in with JS -->
   <div class="mb-2 text-center">
     <span class="fa-stack pub-legend-container" id="dollar">
       <i class="fas fa-square fa-stack-2x"></i>
@@ -21,7 +22,7 @@
       <i class="fas fa-italic fa-stack-1x pub-legend-icon"></i>
     </span>
   </div>
-  <div class="pub-text px-2">
+  <div class="pub-text px-2 text-center">
 
   </div>
 {% endmacro %}
