Add URCO grant news

--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -25,12 +25,26 @@
         <section class="row news-item-container justify-content-center">
           <a class="news-item col-9" href="/news/newadmin1">
             <div class="row ps-0">
+              <div class="col ps-0 my-auto">
+                <img src="{{ RaikouServer }}/image/aspect/people/ajouffray/profile.jpg?a=height&w=6&h=6" class="img-fluid">
+              </div>
               <div class="col-10 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> May 25, 2021</span>
                 <h5 class="header">New Undergrad Student: Andrew</h5>
               </div>
+            </div>
+          </a>
+        </section>
+
+        <section class="row news-item-container justify-content-center">
+          <a class="news-item col-9" href="https://www.usu.edu/today/story/students-receive-grants-to-conduct-impactful-undergraduate-research">
+            <div class="row ps-0">
+              <div class="col-10 pt-1">
+                <span class="date"><i class="far fa-calendar-alt"></i> May 24, 2021</span>
+                <h5 class="header">Kolton Receives URCO Grant</h5>
+              </div>
               <div class="col pe-0 my-auto">
-                <img src="{{ RaikouServer }}/image/aspect/people/ajouffray/profile.jpg?a=height&w=6&h=6" class="img-fluid">
+                <img src="{{ RaikouServer }}/image/aspect/bioinfo/profile/khauck.jpg?a=height&w=6&h=6" class="img-fluid">
               </div>
             </div>
           </a>
