--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -19,29 +19,38 @@
       <!-- News - General -->
       <article class="col-11 col-md">
         <section class="text-center col-header mb-1 mb-md-4" style="font-size: 140%;">
-          <b>General</b>
+          <b class="col-header-text">General</b>
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-9" href="/news/newadmin1">
+          <a class="news-item col-11" href="/news/newadmin1">
             <div class="row ps-0">
               <div class="col ps-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/people/ajouffray/profile.jpg?a=height&w=6&h=6" class="img-fluid">
               </div>
               <div class="col-10 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> May 25, 2021</span>
-                <h5 class="header">New Undergrad Student: Andrew</h5>
+                <h5 class="header mb-0">New Undergrad Student Joined: Andrew Jouffray</h5>
+                <div class="desc mt-0">
+                  Andrew is a computer science student and software developer. He currently works on developing a method to create datasets for deep learning image 
+                  recognition tasks, enabling robots to generate their own training data.
+                </div>
               </div>
             </div>
           </a>
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-9" href="https://www.usu.edu/today/story/students-receive-grants-to-conduct-impactful-undergraduate-research">
+          <a class="news-item col-11" href="https://www.usu.edu/today/story/students-receive-grants-to-conduct-impactful-undergraduate-research">
             <div class="row ps-0">
               <div class="col-10 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> May 24, 2021</span>
-                <h5 class="header">Kolton Receives URCO Grant</h5>
+                <h5 class="header mb-0">Kolton Receives URCO Grant</h5>
+                <div class="desc mt-0">
+                  Student researcher Kolton Hauck is mentored by Rakesh Kaundal, assistant professor of bioinformatics in the PSC department, 
+                  and investigates protein-protein interactions (PPIs) that are necessary for the SARS-CoV-2 virus to gain access to host cells, 
+                  replicate and proliferate.
+                </div>
               </div>
               <div class="col pe-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/profile/khauck.jpg?a=height&w=6&h=6" class="img-fluid">
@@ -51,7 +60,7 @@
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-9" href="/news/newadmin1">
+          <a class="news-item col-11" href="/news/newadmin1">
             <div class="row ps-0">
               <div class="col ps-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/profile/david.jpg?a=height&w=6&h=6" class="img-fluid">
@@ -65,11 +74,16 @@
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-9" href="/news/newadmin1">
+          <a class="news-item col-11" href="/news/newadmin1">
             <div class="row ps-0">
               <div class="col-10 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> Feb 3, 2021</span>
-                <h5 class="header">New Undergrad Student: Kolton</h5>
+                <h5 class="header mb-0">New Undergrad Student Joined: Kolton Hauck</h5>
+                <div class="desc mt-0">
+                  Kolton is a Biological Engineering major and is working on a minor in Computer Science. He wants to use computers to solve modern-day 
+                  biological problems.
+                  He enjoys eating, sleeping and working out.
+                </div>
               </div>
               <div class="col pe-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/profile/khauck.jpg?a=height&w=6&h=6" class="img-fluid">
@@ -79,10 +93,10 @@
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-9" href="/news/citsatdb">
+          <a class="news-item col-11" href="/news/citsatdb">
             <div class="row ps-0">
               <div class="col ps-0 my-auto">
-                <img src="{{ RaikouServer }}/image/aspect/bioinfo/events/IMG_20200113_151858.jpg?a=height&w=4&h=5" class="img-fluid">
+                <img src="{{ RaikouServer }}/image/aspect/bioinfo/events/IMG_20200113_151858.jpg?a=height&w=1&h=1" class="img-fluid">
               </div>
               <div class="col-10 ps-0 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> Jan 11-15, 2020</span>
@@ -93,7 +107,7 @@
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-9" href="/news/newadmin1">
+          <a class="news-item col-11" href="/news/newadmin1">
             <div class="row ps-0">
               <div class="col-10 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> Mar 21, 2020</span>
@@ -110,25 +124,28 @@
       <!-- News - Science -->
       <article class="col-11 col-md">
         <section class="text-center col-header mb-1 mb-md-4 mt-4 mt-md-0" style="font-size: 140%;">
-          <b>Science</b>
+          <b class="col-header-text">Science</b>
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-9" href="http://bioinfo.usu.edu/alfanet/">
+          <a class="news-item col-11" href="http://bioinfo.usu.edu/alfanet/">
             <div class="row ps-0">
               <div class="col ps-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/tools/alfalfa_logo.png?a=height&w=1&h=1" class="img-fluid">
               </div>
               <div class="col-10 ps-0 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> Jul 1, 2021</span>
-                <h5 class="header">alfaNET: A host-pathogen interactome tool</h5>
+                <h5 class="header mb-0">alfaNET: A new host-pathogen interactome tool is now online</h5>
+                <div class="desc mt-0">
+                  alfaNET is a database implemented to provide host-pathogen interactome information to aid the development of molecular-based strategies to mitigate bacterial blight impact in Alfalfa.
+                </div>
               </div>
             </div>
           </a>
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-9" href="/news/newdeephpi">
+          <a class="news-item col-11" href="/news/newdeephpi">
             <div class="row">
               <div class="col-10 ps-2 pt-1">
                 <span class="date"><i class="far fa-calendar-alt"></i> Dec 1, 2019</span>
@@ -142,7 +159,7 @@
         </section>
 
         <section class="row news-item-container justify-content-center">
-          <a class="news-item col-9" href="/news/covidtracker">
+          <a class="news-item col-11" href="/news/covidtracker">
             <div class="row ps-0">
               <div class="col ps-0 my-auto">
                 <img src="https://intermountainhealthcare.org/-/media/coronavirus-covid-19.jpg?la=en&h=286&w=300&mw=300&hash=CE04AC2D6DB0A5068DBB7D0CCEF7636A1C66C738"
