Edit admin setup

--- a/src/views/pages/admin/admin.njk
+++ b/src/views/pages/admin/admin.njk
@@ -20,6 +20,7 @@
 
         <h5 class="kbl-heading"><a href="admin/scm-setup" class="kbl-link">Part 1: Source Control Setup</a></h5>
         <h5 class="kbl-heading"><a href="admin/dev-env" class="kbl-link">Part 2: Dev Environment</a></h5>
+        <h5 class="kbl-heading"><a href="admin/run-local" class="kbl-link">Part 3: Run Locally</a></h5>
       </div>
     </div>
   </div>
