--- a/src/views/pages/admin/run-local/run-local.njk
+++ b/src/views/pages/admin/run-local/run-local.njk
@@ -22,9 +22,8 @@
         </p>
 
         <p class="kbl-text text-thicc">
-          To run the website locally, you'll need two terminal windows open, and they both need to be
-          in the same bioinformatics folder. In one, run <code>npm run dev-js</code>, and in the other,
-          run <code>npm run dev-scss</code>. Now you can open your browser to
+          To run the website locally, all you need to do is type <code>npm start</code> in a terminal in the 'bioinformatics' folder. 
+          Now you can open your browser to
           <code>http://localhost:3000</code>
           (or <a href="http://localhost:3000" target="_blank" rel="noopener noreferrer" class="kbl-link">click here</a>)
           and you'll be able to see your changes. Just refresh the page when you make a change. Ctrl+R also refreshes web pages as well.
@@ -47,7 +46,7 @@
           carried over to the HPC. To make sure changes actually occur after Boxidizer is finished, hit <code>Ctrl+R</code>
           to refresh this page and make sure the changes actually happened. If the website looks buggy, run <br>
           <code>bxz update bioinformatics</code><br>
-          again, this is a weird bug with Boxidizer.
+          This is a weird bug with Boxidizer.
         </p>
       </div>
     </div>
