Edit dev instructions

--- a/src/views/pages/admin/dev-env/dev-env.njk
+++ b/src/views/pages/admin/dev-env/dev-env.njk
@@ -16,7 +16,7 @@
           The reason we test locally is so that we don't run testing on the live site with people possibly using it.
           It also reduces the chances of us accidentally breaking a page. This means we basically have to run the live site on
           our workstations, which means we need to download and install the tech stack.<br><br>
-          As of June 22, 2020, our tech stack consists of
+          As of August 27, 2021, our tech stack consists of
           <a href="https://nodejs.org/en/" target="_blank" rel="noopener noreferrer" class="kbl-link">NodeJS</a>,
           <a href="https://expressjs.com" target="_blank" rel="noopener noreferrer" class="kbl-link">Express</a>,
           <a href="https://sass-lang.com" target="_blank" rel="noopener noreferrer" class="kbl-link">SASS</a>, and
@@ -29,13 +29,13 @@
         </p>
         <p class="kbl-text text-thicc">
           First, you'll want to install NodeJS on your Linux machine with
-          <a href="https://computingforgeeks.com/how-to-install-nodejs-on-ubuntu-debian-linux-mint/"
-            target="_blank" rel="noopener noreferrer" class="kbl-link">this guide</a>, or on MacOS with
-          <a href="https://nodesource.com/blog/installing-nodejs-tutorial-mac-os-x/"
+          <a href="https://www.digitalocean.com/community/tutorials/how-to-install-node-js-on-ubuntu-20-04"
+            target="_blank" rel="noopener noreferrer" class="kbl-link">this guide</a> (use Option 2, an outdated version of Node might not work), or on MacOS with
+          <a href="https://www.newline.co/@Adele/how-to-install-nodejs-and-npm-on-macos--22782681"
             target="_blank" rel="noopener noreferrer" class="kbl-link">this guide</a>.
-          To make sure Node is installed, check your installation in a terminal with<br>
-          <code>node -v</code><br>
-          and make sure you also have NPM with<br>
+          To make sure Node is installed, check your installation in a terminal with
+          <code>node -v</code>
+          and make sure you also have NPM with
           <code>npm -v</code><br>
         </p>
 
