--- a/src/views/pages/admin/run-local/run-local.njk
+++ b/src/views/pages/admin/run-local/run-local.njk
@@ -34,7 +34,8 @@
           the terminals. Use <code>git add -A</code> to stage all of your changes, and
           <code>git commit -m "Your message here"</code> commit your changes. To push your changes
           to the server, use <code>git push -u origin master</code>. Now your changes are on the GitHub server!
-          Also, be specific in your commit messages, as that allows other developers to see what exactly within the code.
+          Also, be specific in your commit messages, as that allows other developers to see what exactly within the code. You can also use your code editor to 
+          commit and push changes as well.
         </p>
 
         <p class="kbl-text text-thicc">
